# mitm-proxy

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  gen.sh  new_script.py  script.py
certs/: RootCA.crt  RootCA.key  RootCA.srl  ca.crt  ca.key  cert.crt  cert.key  domains.ext  localhost.crt  localhost.csr  localhost.key
include/: Acceptor.h  Client.h  ExceptionHandler.h  GenerateCert.h  HTTPHandler.h  HTTPSHandler.h  IHandler.h  LoadCertificate.h  LockFreeQueue.h  LoggingHandler.h  MakeHTTPRequest.h  MakeHTTPSRequest.h  RequestMaker.h  Server.h  ThreadPool.h  TimeLogger.h  Utils.h  generate_cert.hpp  make_http_request.hpp  make_request.hpp  server_certificate.hpp
requests/: FileWithRequest
src/: Client.cpp  main.cpp
